update squashing section

--- a/contributing.mdx
+++ b/contributing.mdx
@@ -150,6 +150,7 @@ We are following [git flow](https://www.atlassian.com/git/tutorials/comparing-wo
 ### Squash
 
 - Whenever you want to squash commits, make sure that the branch is immediately deleted afterwards and not merged to anything else as it can cause conflicts on all changed files.
+- When merging release branches don't squash old commits or commits, that have been squashed already
 
 ### Rebase/Force-push
 
