--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+title: "Quickstart"
+description: "Start building awesome documentation in under 5 minutes"
 ---
 
 ![Hero Image](https://mintlify-assets.b-cdn.net/illustration-optimized.svg)
@@ -14,26 +14,39 @@ description: 'Start building awesome documentation in under 5 minutes'
 
 Learn how to update your docs locally and and deploy them to the public.
 
+### Edit and preview
+
+<AccordionGroup>
+  <Accordion icon="github" title="Clone your docs locally">
+    During the onboarding process, we created a repository on your Github with
+    your docs content. You can find this repository on our
+    [dashboard](https://dashboard.mintlify.com). To clone the repository
+    locally, follow these
+    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
+    in your terminal.
+  </Accordion>
+  <Accordion icon="rectangle-terminal" title="Preview changes">
+    Previewing helps you make sure your changes look as intended. We built a
+    command line interface to render these changes locally. 1. Install the
+    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
+    documentation changes locally with this command: ``` npm i -g mintlify ```
+    2. Run the following command at the root of your documentation (where
+    `mint.json` is): ``` mintlify dev ```
+  </Accordion>
+</AccordionGroup>
+
+### Deploy your changes
+
 <AccordionGroup>
 
-<Accordion icon="rectangle-terminal" title="Preview local changes">
-1. Clone the repository you just made. 
-2. Install the [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the documentation changes locally with this command:
-  ```
-  npm i -g mintlify
-  ```
-4. Run the following command at the root of your documentation (where `mint.json` is):
-  ```
-  mintlify dev
-  ```
-
-</Accordion>
-
-<Accordion icon="rocket" title="Deploying changes to production">
-Mintlify automatically deploys your docs when your push to Git through our Mintlify Github App. The link to install should have been sent to you after you deployed your docs. [Let us know](mailto:kate@mintlify.com) if you need a new link.
-
-Once the bot has been successfully installed, there should be a check mark next to the commit hash of the repo.
+<Accordion icon="message-bot" title="Install our Github app">
+  Our Github app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself. You can find the link to install on your [dashboard](https://dashboard.mintlify.com). 
+  Once the bot has been successfully installed, there should be a check mark next to the commit hash of the repo.
 ![](/images/github-bot-verification.png)
+</Accordion>
+<Accordion icon="rocket" title="Push your changes">
+  [Commit and push your changes to Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push) for your changes to update in your docs site. If you push and don't see that the Github app successfully deployed your changes, you can also manually update your docs through our [dashboard](https://dashboard.mintlify.com).
+  ![](/images/manual-update.png)
 
 </Accordion>
 
