--- a/settings/custom-domain/subdomain.mdx
+++ b/settings/custom-domain/subdomain.mdx
@@ -3,14 +3,35 @@ title: "Subdomain"
 description: "Host the documentation at your website's custom subdomain"
 ---
 
+To host your docs on a custom subdomain, you'll need to set the custom subdomain you want on your Mintlify settings and configure your DNS settings on your domain provider.
+
+<Info>
+  Looking to set up a custom subdirectory domain like mintlify.com/docs? Find
+  instructions [here](/subdirectory.mdx).
+</Info>
+
+## Mintlify Settings
+
+Navigate to your [dashboard project](dashboard.mintlify.com) and click "Add custom subdomain". Submit the custom subdomain you want, ommitting `https://www`. For example, `docs.mintlify.com`.
+
+![](/images/add-custom-domain.png)
+
+## Vercel Verification
+
+If you're using vercel as your domain provider, you'll need to add a verification `TXT` record. This information will show on your dashboard after submitting your custom subdomain, as well as be emailed to you.
+
 ## DNS Configuration
 
-Navigation to the DNS settings for your domain. Add a new DNS entry with the following values.
+Navigate to the DNS settings for your domain on your domain provider. Add a new DNS entry with the following values.
 
 ```
 CNAME | docs | cname.vercel-dns.com
 ```
 
-<img alt="DNS" src="https://mintlify-assets.b-cdn.net/mintlify-dns.png" style={{borderRadius: "0.5rem"}} />
+<img
+  alt="DNS"
+  src="https://mintlify-assets.b-cdn.net/mintlify-dns.png"
+  style={{ borderRadius: "0.5rem" }}
+/>
 
 Please [contact support](mailto:hi@mintlify.com) if you don't see the custom subdomain set up after the above configuration.
