--- a/analytics/set-up/google-analytics.mdx
+++ b/analytics/set-up/google-analytics.mdx
@@ -15,7 +15,7 @@ You will need to create a web stream to get the Measurement ID to put into Mintl
 
 Click the cog at the bottom left of the Google Analytics screen. Then click on Data Streams.
 
-<Frame>![](/docs/img/analytics/ga4-web-streams.png)</Frame>
+<Frame>![](/images/ga4-web-streams.png)</Frame>
 
 Create a Web Stream and put the URL of your Mintlify docs site as the stream URL.
 
