Add gradient frame

--- a/components/frame.mdx
+++ b/components/frame.mdx
@@ -24,6 +24,27 @@ You can add additional context to an image using the optional `caption` prop.
   />
 </Frame>
 
+## Gradient
+
+Specify the `type` property to `gradient` to get see a gradient frame.
+
+<Frame type="gradient">
+  <img
+    className="rounded-md"
+    src="https://mintlify-assets.b-cdn.net/grand-canyon.jpeg"
+  />
+</Frame>
+
+## Props
+
+<ResponseField name="type" type="string" default="grid">
+  Specify the style of the frame. Allowed values are `grid` and `gradient`
+</ResponseField>
+
+<ResponseField name="caption" type="string">
+  Optional caption text to show centered under your component.
+</ResponseField>
+
 <RequestExample>
   ```jsx Frame Example
   <Frame>
@@ -37,10 +58,10 @@ You can add additional context to an image using the optional `caption` prop.
 </Frame>
 ```
 
+```jsx Frame with Gradient
+<Frame type="gradient">
+  <img src="/path/image.jpg" />
+</Frame>
+```
+
 </RequestExample>
-
-## Props
-
-<ResponseField name="caption" type="string">
-  Optional caption text to show centered under your component.
-</ResponseField>
