Update for frame

--- a/components/frame.mdx
+++ b/components/frame.mdx
@@ -37,7 +37,7 @@ Specify the `type` property to `gradient` to get see a gradient frame.
 
 ## Props
 
-<ResponseField name="type" type="string" default="grid">
+<ResponseField name="type" type="string">
   Specify the style of the frame. Allowed values are `grid` and `gradient`
 </ResponseField>
 
@@ -46,13 +46,13 @@ Specify the `type` property to `gradient` to get see a gradient frame.
 </ResponseField>
 
 <RequestExample>
-  ```jsx Frame Example
+  ```jsx Frame
   <Frame>
     <img src="/path/image.jpg" />
   </Frame>
   ```
 
-```jsx Frame with Captions Example
+```jsx Frame with Captions
 <Frame caption="Caption Text">
   <img src="/path/image.jpg" />
 </Frame>
