Update with glass frame

--- a/components/frame.mdx
+++ b/components/frame.mdx
@@ -24,11 +24,11 @@ You can add additional context to an image using the optional `caption` prop.
   />
 </Frame>
 
-## Gradient
+## Glass Frame
 
-Specify the `type` property to `gradient` to get see a gradient frame.
+Specify the `type` property to `glass` to get see a transparent frame.
 
-<Frame type="gradient">
+<Frame type="glass">
   <img
     className="rounded-md"
     src="https://mintlify-assets.b-cdn.net/grand-canyon.jpeg"
@@ -38,7 +38,7 @@ Specify the `type` property to `gradient` to get see a gradient frame.
 ## Props
 
 <ResponseField name="type" type="string">
-  Specify the style of the frame. Allowed values are `grid` and `gradient`
+  Specify the style of the frame. Allowed values are `simple` and `glass`
 </ResponseField>
 
 <ResponseField name="caption" type="string">
@@ -58,8 +58,8 @@ Specify the `type` property to `gradient` to get see a gradient frame.
 </Frame>
 ```
 
-```jsx Frame with Gradient
-<Frame type="gradient">
+```jsx Glass Frame
+<Frame type="glass">
   <img src="/path/image.jpg" />
 </Frame>
 ```
