--- a/components/frame.mdx
+++ b/components/frame.mdx
@@ -2,6 +2,7 @@
 title: 'Image Frame'
 description: 'Use the Frame component to wrap images or other components in a container.'
 icon: 'frame'
+tag: 'New'
 ---
 
 Frames are very helpful if you want to center an image.
