added info about tabs

--- a/settings/custom-styling.mdx
+++ b/settings/custom-styling.mdx
@@ -112,6 +112,20 @@ Example: `mintlify`
   </Expandable>
 </ResponseField>
 
+<ResponseField name="tabs" type="Tabs[]">
+  An array of navigational tabs.
+  <Expandable title="Tabs">
+    <ResponseField name="name" type="string">
+    The name of the tab label.
+
+    Example: `API Reference`
+    </ResponseField>
+    <ResponseField name="url" type="string">
+    The start of the URL that marks what pages go in the tab. Generally, this is the name of the folder you put your pages in.
+    </ResponseField>
+  </Expandable>
+</ResponseField>
+
 ## Backgrounds
 
 <ResponseField name="modeToggle" type="ModeToggle">
