--- a/settings/global.mdx
+++ b/settings/global.mdx
@@ -166,6 +166,18 @@ Example: `mintlify`
   </Expandable>
 </ResponseField>
 
+<ResponseField name="tabs" type="Tabs[]">
+  An array of navigational tabs.
+  <Expandable title="Tabs">
+    <ResponseField name="name" type="string">
+    The name of the tab label.
+    </ResponseField>
+    <ResponseField name="url" type="string">
+    The start of the URL that marks what pages go in the tab. Generally, this is the name of the folder you put your pages in.
+    </ResponseField>
+  </Expandable>
+</ResponseField>
+
 <ResponseField name="api" type="API">
   Configuration for API settings. Learn more about API pages at [API Components](/api-playground/demo).
   <Expandable title="API">
