Fix broken links

--- a/api-playground/configuration.mdx
+++ b/api-playground/configuration.mdx
@@ -5,7 +5,7 @@ description: "Set up documentation for your API endpoints"
 
 ## Setting the API metadata
 
-Setting the `api` field in the page's metadata will enable the [API playground](/api-playground/demo).
+Setting the `api` field in the page's metadata will enable the [API playground](/api-playground).
 
 <CodeGroup>
 
