--- a/changelog/command-line/2.0.17.mdx
+++ b/changelog/command-line/2.0.17.mdx
@@ -20,4 +20,4 @@ Fixes bug related to parsing `openapi` property in page metadata.
 
 ## Segment
 
-We added [Segment](/analytics/set-up/segment) as an analytics integration.
+We added Segment as an analytics integration.
