--- a/components/api/param.mdx
+++ b/components/api/param.mdx
@@ -1,10 +1,10 @@
 ---
-title: 'Parameter Types'
-description: 'Set path, query, and body parameters'
-icon: 'input-text'
+title: "Parameter Types"
+description: "Set path, query, and body parameters"
+icon: "input-text"
 ---
 
-All `ParamField` components are added as interactive elements in the API playground. See the [demo](/api-playground/demo) for an example.
+All `ParamField` components are added as interactive elements in the API playground. See the [demo](/api-playground) for an example.
 
 <ParamField path="user_id" type="string">
   The id of the user
