--- a/settings/custom-domain/subdomain.mdx
+++ b/settings/custom-domain/subdomain.mdx
@@ -7,12 +7,12 @@ To host your docs on a custom subdomain, you'll need to set the custom subdomain
 
 <Info>
   Looking to set up a custom subdirectory domain like mintlify.com/docs? Find
-  instructions [here](/subdirectory.mdx).
+  instructions [here](./subdirectory).
 </Info>
 
 ## Mintlify Settings
 
-Navigate to your [dashboard project](dashboard.mintlify.com) and click "Add custom subdomain". Submit the custom subdomain you want, ommitting `https://www`. For example, `docs.mintlify.com`.
+Navigate to your [dashboard project](https://dashboard.mintlify.com) and click "Add custom subdomain". Submit the custom subdomain you want, ommitting `https://www`. For example, `docs.mintlify.com`.
 
 ![](/images/add-custom-domain.png)
 
