--- a/settings/global.mdx
+++ b/settings/global.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Global Settings (mint.json)'
-description: 'Mintlify gives you complete control over the look and feel of your documentation using the mint.json file'
+title: "Global Settings (mint.json)"
+description: "Mintlify gives you complete control over the look and feel of your documentation using the mint.json file"
 ---
 
 Every Mintlify site needs a `mint.json` file with the core configuration settings. Learn more about the [properties](#properties) or from an [example](#example-mint-json)
@@ -170,16 +170,17 @@ Example: `mintlify`
   An array of navigational tabs.
   <Expandable title="Tabs">
     <ResponseField name="name" type="string">
-    The name of the tab label.
+      The name of the tab label.
     </ResponseField>
     <ResponseField name="url" type="string">
-    The start of the URL that marks what pages go in the tab. Generally, this is the name of the folder you put your pages in.
+      The start of the URL that marks what pages go in the tab. Generally, this
+      is the name of the folder you put your pages in.
     </ResponseField>
   </Expandable>
 </ResponseField>
 
 <ResponseField name="api" type="API">
-  Configuration for API settings. Learn more about API pages at [API Components](/api-playground/demo).
+  Configuration for API settings. Learn more about API pages at [API Components](/api-playground).
   <Expandable title="API">
     <ResponseField name="baseUrl" type="string">
       The base url for all API endpoints. If `baseUrl` is an array, it will enable for multiple base url
@@ -211,7 +212,7 @@ Example: `mintlify`
         <ResponseField name="mode" default="show" type='"show" | "simple" | "hide"'>
           Whether the playground is showing, hidden, or only displaying the endpoint with no added user interactivity `simple`
 
-          Learn more at the [playground guides](/api-playground/demo)
+          Learn more at the [playground guides](/api-playground)
         </ResponseField>
       </Expandable>
     </ResponseField>
@@ -367,7 +368,7 @@ Click on the following dropdown to view a sample configuration file
     },
     {
       "group": "API Components",
-      "pages": ["api-components/playground", "api-components/examples"]
+      "pages": ["api-playground/overview", "api-playground/configuration"]
     },
     {
       "group": "Settings",
