--- a/settings/page.mdx
+++ b/settings/page.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Page Titles and Metadata'
-description: 'Setting the title and metadata for navigation and SEO'
+title: "Page Titles and Metadata"
+description: "Setting the title and metadata for navigation and SEO"
 ---
 
 ## The Basics
@@ -17,7 +17,7 @@ title: [title of the page]
 
 ```md Example
 ---
-title: 'Page'
+title: "Page"
 ---
 ```
 
@@ -33,8 +33,8 @@ Other metadata goes in between the same `---` lines. For example, this page uses
 
 ```md
 ---
-title: 'Page Titles and Metadata'
-description: 'Metadata is important for API pages and SEO optimization'
+title: "Page Titles and Metadata"
+description: "Metadata is important for API pages and SEO optimization"
 ---
 ```
 
@@ -42,7 +42,7 @@ description: 'Metadata is important for API pages and SEO optimization'
 
 API pages let you build interactive API playgrounds. To create an API page, you must set an `api` or `openapi` property in the page metadata.
 
-Learn more about API playgrounds in [our demo](/api-playground/demo).
+Learn more about API playgrounds in [our demo](/api-playground).
 
 <CodeGroup>
 
@@ -74,8 +74,8 @@ You can show a different title in the navigation with the `sidebarTitle` metadat
 
 ```md
 ---
-title: 'Your very long page title you want to shorten'
-sidebarTitle: 'Short title'
+title: "Your very long page title you want to shorten"
+sidebarTitle: "Short title"
 ---
 ```
 
@@ -85,8 +85,8 @@ Want an icon for your sidebar item like the ones in [components](/components/acc
 
 ```md
 ---
-title: 'Code Block'
-icon: 'rectangle-code'
+title: "Code Block"
+icon: "rectangle-code"
 ---
 ```
 
@@ -96,8 +96,8 @@ You can hide the headings preview on the right side of the page. This is useful 
 
 ```md
 ---
-title: 'Page with no headings'
-mode: 'wide'
+title: "Page with no headings"
+mode: "wide"
 ---
 ```
 
@@ -107,8 +107,8 @@ If you want the sidebar to open an external URL, you can set the `url` metadata 
 
 ```md
 ---
-title: 'Page that goes to external link'
-url: 'https://www.npmjs.com/package/mintlify'
+title: "Page that goes to external link"
+url: "https://www.npmjs.com/package/mintlify"
 ---
 ```
 
