--- a/writing-content/embed.mdx
+++ b/writing-content/embed.mdx
@@ -33,13 +33,17 @@ Loads another HTML page within the document. Most commonly used for embedding vi
 <iframe src="https://www.youtube.com/embed/4KzFe50RQkQ"> </iframe>
 ```
 
-To have videos autoplay, add `autoplay = {true}`. 
+To have videos autoplay, add `autoplay = {true}`.
 
-<Tip> Additionally, we support mp4 files up to 5 MB and you can also upload your videos to storage services like Cloudinary to reference them in your Mintlify documentation! </Tip>
+<Tip>
+  Additionally, we support mp4 files up to 5 MB and you can also upload your
+  videos to storage services like Cloudinary to reference them in your Mintlify
+  documentation!
+</Tip>
 
 ### Images
 
-Insert an image onto the page. Used over the standard [markdown image syntax](/writing-content/image#using-markdown) for more control over the image styling.
+Insert an image onto the page. Used over the standard [markdown image syntax](/writing-content/image-embeds#using-markdown) for more control over the image styling.
 
 ```html
 <img height="200" src="/path/image.jpg" />
