--- a/api-playground/overview.mdx
+++ b/api-playground/overview.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Playground Overview'
-description: 'Enable users to interact with your API'
-api: 'GET https://server.mintlify.com/api/v1/demo'
+title: "Playground Overview"
+description: "Enable users to interact with your API"
+api: "GET https://server.mintlify.com/api/v1/demo"
 hideApiMarker: true
 ---
 
@@ -25,7 +25,9 @@ The API playground is an interactive environment to make requests and preview an
 To create an API page, you must set an `api` or `openapi` property in the page metadata. See [Configuration](/api-playground/configuration) for more details.
 
 <Warning>
-If using a folder to store your api pages, you cannot use `api` for the name of the folder unless it is nested inside another folder. Folder names such as `api-reference` are accepted.
+  If using a folder to store your api pages, you cannot use `api` for the name
+  of the folder unless it is nested inside another folder. Folder names such as
+  `api-reference` are accepted.
 </Warning>
 
 ### Defining API Parameters
@@ -34,9 +36,10 @@ See our [components reference](/components/api) for all components you can use t
 
 ## Playground Settings
 
-In `mint.json`, add the following properties: 
+In `mint.json`, add the following properties:
+
 <ResponseField name="api" type="API">
-  Configuration for API settings. Learn more about API pages at [API Components](/api-playground/demo).
+  Configuration for API settings. Learn more about API pages at [API Components](/api-playground).
   <Expandable title="API">
     <ResponseField name="baseUrl" type="string">
       The base url for all API endpoints. If `baseUrl` is an array, it will enable for multiple base url
@@ -68,7 +71,7 @@ In `mint.json`, add the following properties:
         <ResponseField name="mode" default="show" type='"show" | "simple" | "hide"'>
           Whether the playground is showing, hidden, or only displaying the endpoint with no added user interactivity `simple`
 
-          Learn more at the [playground guides](/api-playground/demo)
+          Learn more at the [playground guides](/api-playground)
         </ResponseField>
       </Expandable>
     </ResponseField>
