--- a/writing-content/overview.mdx
+++ b/writing-content/overview.mdx
@@ -10,7 +10,6 @@ Components are reusable building blocks for your documentation. They can be adde
   docs beautiful without formatting things yourself.
 </Tip>
 
-
 ## Examples
 
 ### Code Blocks
@@ -39,7 +38,7 @@ class HelloWorld {
 
 ### Callouts
 
-To present additional context outside of the main content, you can use a [Callout](/components/callouts) component. Find Warnings and Notes in addition to Tip callouts here. 
+To present additional context outside of the main content, you can use a [Callout](/components/callouts) component. Find Warnings and Notes in addition to Tip callouts here.
 
 <Tip>This suggests a helpful tip</Tip>
 
@@ -49,7 +48,7 @@ To present additional context outside of the main content, you can use a [Callou
 
 ### Accordions
 
-Use the [Accordian](/components/accordian) component to create a dropdown with additional content.
+Use the [Accordian](/components/accordion) component to create a dropdown with additional content.
 
 <Accordion title="I am an Accordion.">
   You can put any content in here.
@@ -61,7 +60,7 @@ Use the [Accordian](/components/accordian) component to create a dropdown with a
 </Accordion>
 ```
 
-### Cards 
+### Cards
 
 To highlight important points and links, you can use a [Card](/components/card) component.
 
@@ -76,7 +75,9 @@ To highlight important points and links, you can use a [Card](/components/card) 
   brings you to the Card components page.
 </Card>
 ```
+
 ### Other
+
 For a full list of pre-built components, see our [Components library](/components).
 
 ### Requests
