--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,7 +3,7 @@ title: 'Introduction'
 description: 'Build beautiful documentation that converts users'
 ---
 
-![Hero Image](https://mintlify-assets.b-cdn.net/intro-hero.png)
+![Hero Image](https://mintlify-assets.b-cdn.net/intro-hero-light.png)
 
 Welcome to Mintlify's docs! Get started creating beautiful docs effortlessly. If you have any questions, join our [Discord Community](https://discord.com/invite/MPNgtSZkgK) or [email us](mailto:kate@mintlify.com).
 
