Documentation about video tag

--- a/writing-content/image-embeds.mdx
+++ b/writing-content/image-embeds.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Images and Embeds'
-description: 'Add image, video, and other HTML elements'
+title: "Images and Embeds"
+description: "Add image, video, and other HTML elements"
 ---
 
 <img
@@ -18,7 +18,7 @@ The [markdown syntax](https://www.markdownguide.org/basic-syntax/#images) lets y
 ![title](/path/image.jpg)
 ```
 
-Note that the image file size must be less than 5MB. Otherwise, we recommend hosting on a service like [Cloudinary](https://cloudinary.com/) or [S3](https://aws.amazon.com/s3/). You can then use that URL and embed. 
+Note that the image file size must be less than 5MB. Otherwise, we recommend hosting on a service like [Cloudinary](https://cloudinary.com/) or [S3](https://aws.amazon.com/s3/). You can then use that URL and embed.
 
 ### Using Embeds
 
@@ -48,6 +48,12 @@ For more information, we recommend the following sections:
   allowfullscreen
 ></iframe>
 
+<video
+  controls
+  className="w-full aspect-video"
+  src="link-to-your-video.com"
+></video>
+
 <br />
 
 <Tip>
@@ -56,18 +62,47 @@ Mintlify supports [HTML tags in Markdown](https://www.markdownguide.org/basic-sy
 
 </Tip>
 
+### Videos
+
+For YouTube videos use:
+
+```html
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/4KzFe50RQkQ"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
+```
+
+For other videos, use:
+
+```html
+<video
+  controls
+  className="w-full aspect-video"
+  src="link-to-your-video.com"
+></video>
+```
 
 ### iFrames
 
-Loads another HTML page within the document. Most commonly used for embedding videos.
+Loads another HTML page within the document.
 
 ```html
 <iframe src="https://www.youtube.com/embed/4KzFe50RQkQ"> </iframe>
 ```
 
-To have videos autoplay, add `autoplay = {true}`. 
+To have videos autoplay, add `autoplay = {true}`.
 
-<Tip> Additionally, we support mp4 files up to 5 MB and you can also upload your videos to storage services like Cloudinary to reference them in your Mintlify documentation! </Tip>
+<Tip>
+  {" "}
+  Additionally, we support mp4 files up to 5 MB and you can also upload your videos
+  to storage services like Cloudinary to reference them in your Mintlify documentation!{" "}
+</Tip>
 
 ### Line Breaks
 
