Add documentation about openapi-schema

--- a/api-playground/openapi.mdx
+++ b/api-playground/openapi.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'OpenAPI Support'
-description: 'Reference OpenAPI endpoints for the API playground'
+title: "OpenAPI Support"
+description: "Reference OpenAPI endpoints for the API playground"
 ---
 
 ### Add an OpenAPI specification file
@@ -18,3 +18,13 @@ By using the OpenAPI reference, the name, description, parameters, responses, an
   specifications exactly. Nothing is displayed if the endpoint doesn't exist in
   the OpenAPI file.
 </Note>
+
+### OpenAPI Schema
+
+Generate a page that displays an OpenAPI schema which is defined in an OpenAPI spec's `components.schemas` map.
+
+```md
+---
+openapi-schema: SchemaKey
+---
+```
