--- a/development.mdx
+++ b/development.mdx
@@ -1,7 +1,8 @@
 ---
-title: 'Development'
-description: 'Learn how to preview changes locally'
+title: "Preview Changes"
+description: "Learn how to preview changes locally"
 ---
+
 <Info>
   **Prerequisite** You should have installed Node.js (version 18.10.0 or
   higher).
@@ -60,12 +61,15 @@ yarn global upgrade mintlify
 </CodeGroup>
 
 ## Deployment
+
 <Tip>
-Unlimited editors available under the [Startup Plan](https://mintlify.com/pricing)
+  Unlimited editors available under the [Startup
+  Plan](https://mintlify.com/pricing)
 </Tip>
 
 You should see the following if the deploy successfully went through:
-<img src ="/images/checks-passed.png" style={{width: "50 rem"}}/>
+
+<img src="/images/checks-passed.png" style={{ width: "50 rem" }} />
 
 ## Troubleshooting
 
