--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Introduction'
-description: 'Build beautiful documentation that converts users'
+title: "Introduction"
+description: "Build beautiful documentation that converts users"
 ---
 
 ![Hero Image](https://mintlify-assets.b-cdn.net/intro-hero-light.png)
@@ -11,9 +11,8 @@ See how other companies are building high-converting documentation on our
 [showcase](https://mintlify.com/showcase).
 
 <Info>
-  **Migrations** The Mintlify team can help you migrate your docs if it is
-  currently hosted elsewhere. If you're interested in having your docs migrated
-  over for free, contact our team at hi@mintlify.com.
+  Get a free migration with our startup plan. Request a migration on your
+  [dashboard](dashboard.mintlify.com).
 </Info>
 
 ## Get Started
