update navigation for tabs and anchors

--- a/settings/global.mdx
+++ b/settings/global.mdx
@@ -152,7 +152,8 @@ Example: `mintlify`
 </ResponseField>
 
 <ResponseField name="topAnchor" type="Object">
-  Override the default configurations for the top-most anchor.
+  Override the default configurations for the top-most anchor. Note: if you have
+  tabs configured, this does not apply.
   <Expandable title="Object">
     <ResponseField name="name" default="Documentation" type="string">
       The name of the top-most anchor
