--- a/settings/navigation.mdx
+++ b/settings/navigation.mdx
@@ -1,15 +1,95 @@
 ---
 title: "Navigation"
-description: "The navigation field in mint.json defines the pages that go in the navigation menu"
+description: "Organize your docs directory to guide your users to the information they need "
 ---
 
-The navigation menu is the list of links on every website.
+## Tabs
 
-You will likely update `mint.json` every time you add a new page. Pages do not show up automatically.
+Tabs help distinguish between different topics or sections of your documentation. They show up above the main sidebar.
 
-## Navigation syntax
+<Frame>
+  <img className="block h-48 dark:hidden" src="images/tabs-light.png" />
+  <img className="hidden h-48 dark:block" src="images/tabs-dark.png" />
+</Frame>
 
-Our navigation syntax is recursive which means you can make nested navigation groups. You don't need to include `.mdx` in page names.
+Configure tabs with the `tabs` field of the `mint.json` file. The `pages` field of the tab object should map to a folder of content added to your sidebar.
+
+```json
+"tabs": [
+    {
+        "name": "API References",
+        "pages": "api-references"
+    },
+    {
+        "name": "Content",
+        "pages": "content"
+    }
+]
+```
+
+To configure the default `Documentation` primary tab, add the `primaryTab` field to your `mint.json` file with your desired name. Any files in your navigation not in a folder reserved by another tab will show up in the primary tab.
+
+```json
+"primaryTab": {
+    "name": "Home"
+}
+```
+
+## Anchors
+
+Anchors provide another way to direct users to sections of your documentation, or link out to external URLs.
+
+<Frame>
+  <img
+    className="block h-48 dark:hidden"
+    src="https://mintlify-assets.b-cdn.net/anchor-light.png"
+  />
+  <img
+    className="hidden h-48 dark:block"
+    src="https://mintlify-assets.b-cdn.net/anchor-dark.png"
+  />
+</Frame>
+
+Configure anchors with the `anchors` field of the `mint.json` file. The `url` field of the tab object should map an external link, or a folder of content added to your sidebar. More fields for anchors can be found [here](/settings/global).
+
+```json
+"anchors": [
+    {
+        "name": "API References",
+        "icon": "code",
+        "url": "api-references"
+    },
+    {
+        "name": "Content",
+        "icon": "pencil",
+        "url": "content"
+    },
+    {
+        "name": "Contact us",
+        "icon": "envelope",
+        "url": "mintlify.com/contact-us"
+    }
+]
+```
+
+To configure the default `Documentation` top anchor, add the `topAnchor` field to your `mint.json`. Note: The default top anchor does not show
+
+```json
+"topAnchor": {
+    "name": "Home",
+    "icon": "building",
+    "url": "home"
+}
+```
+
+## Sidebar
+
+Our sidebar navigation syntax is recursive which means you can make nested navigation groups. You don't need to include `.mdx` in page names.
+
+<Info>
+  Once you add a page to your docs directory, you'll need to add the path to
+  `mint.json` to add it to the sidebar. Pages do not show up automatically.
+</Info>
 
 <CodeGroup>
 
@@ -39,7 +119,7 @@ Our navigation syntax is recursive which means you can make nested navigation gr
 
 </CodeGroup>
 
-## Folders
+### Folders
 
 Simply put your MDX files in folders and update the paths in `mint.json`.
 
@@ -60,6 +140,6 @@ You cannot use `api` for the name of a folder unless you nest it inside another 
 ]
 ```
 
-## Hidden Pages
+### Hidden Pages
 
 MDX files not included in `mint.json` will not show up in the sidebar but are accessible through the search bar and by linking directly to them.
