--- a/settings/navigation.mdx
+++ b/settings/navigation.mdx
@@ -8,8 +8,8 @@ description: "Organize your docs directory to guide your users to the informatio
 Tabs help distinguish between different topics or sections of your documentation. They show up above the main sidebar.
 
 <Frame>
-  <img className="block h-48 dark:hidden" src="images/tabs-light.png" />
-  <img className="hidden h-48 dark:block" src="images/tabs-dark.png" />
+  <img className="block h-32 dark:hidden" src="/images/tabs-light.png" />
+  <img className="hidden h-32 dark:block" src="/images/tabs-dark.png" />
 </Frame>
 
 Configure tabs with the `tabs` field of the `mint.json` file. The `pages` field of the tab object should map to a folder of content added to your sidebar.
@@ -41,11 +41,11 @@ Anchors provide another way to direct users to sections of your documentation, o
 
 <Frame>
   <img
-    className="block h-48 dark:hidden"
+    className="block h-32 dark:hidden"
     src="https://mintlify-assets.b-cdn.net/anchor-light.png"
   />
   <img
-    className="hidden h-48 dark:block"
+    className="hidden h-32 dark:block"
     src="https://mintlify-assets.b-cdn.net/anchor-dark.png"
   />
 </Frame>
